--- a/Erorrs.html
+++ b/Erorrs.html
@@ -11,12 +11,12 @@
       <table border="10" align="center" bordercolor="red">
          <tr>
                <td><img width="120" src="https://ia.media-imdb.com/images/M/MV5BMTI5ODY5NTUzMF5BMl5BanBnXkFtZTcwOTAzNTIzMw@@._CR3,34,1865,1397_UX614_UY460._SY230_SX307_AL_.jpg"></td>
-               <td><h2>Iron Man 3</h2></td>
+               <td bgcolor="red"><h2 align="center">Iron Man 3</h2></td>
                <td><u> Budget: $200.000.000 (estimated) </u></td>
          </tr>
          <tr>
                <td><img width="120" src="https://ia.media-imdb.com/images/M/MV5BMTYwNjAyODIyMF5BMl5BanBnXkFtZTYwNDMwMDk2._V1_.jpg"></td>
-               <td><h2>Batman</h2></td>
+               <td bgcolor="gray"><h2 align="center">Batman</h2></td>
                <td><u> Budget:$35,000,000 (estimated) </u></td>
          </tr>
       </table>
