--- a/Marin/Forme.html
+++ b/Marin/Forme.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1 align="center">Create An Account!</h1>
-  <form>
+  <form action="multumesc.html">
    <table border="2" align="center">
       <tr>
           <td>
