--- a/Register.html
+++ b/Register.html
@@ -18,6 +18,7 @@
 			margin: 140px 0px 0px 450px;
 			padding: 15px;
 			border-radius: 3px;
+			box-shadow: 0 0px 80px black;
 		}
 		div h1 {
 			margin-top: 35px;
@@ -31,14 +32,18 @@
 			border-radius: 5px;
 			text-align: center;
 			border: none;
+			box-shadow: inset 0 0 8px black;
 		}
-#two {
+
+
+	#two {
 			background-color: #E6E6E6;
 			font-size: 25px;
 			padding: 10px;
 			border-radius: 5px;
 			text-align: center;
 			border: none;
+			box-shadow: inset 0 0 8px black;
 		}
 			
 #three {
@@ -51,6 +56,15 @@
 		border-radius: 5px;
 		border: none;
 }		
+
+#three:hover {
+		background-color:#7FB3D5 ;
+		border:3px solid #ABB2B9; 
+		border-radius: 10px;
+		padding: 10px;
+
+}
+
 #four { 
 		color:#585858;	
 		margin-top:30px;	
